syntax = "proto3";
option go_package =  "../api";

// 指定等会文件生成出来的package
package api;

// 定义request
message QueryProductRequest{
  int32 ProductId = 1;
}

// 定义response
message QueryProductResponse{
  int32 Code = 1;
  string Msg = 2;
  int32 ProductId = 3;
  string Name = 4;
  int64 Price = 5;
  int32 Stock = 6;
}

// 定义服务主体
service ProdService{
  // 定义方法
  rpc QueryProduct(QueryProductRequest) returns(QueryProductResponse);
}